# Experiments-With-Rust-LLMs

./: .gitignore  Cargo.toml  README.md
src/: get_model.py  main.rs
src/llm/: mod.rs  model_wrapper.rs  tokeniser_wrapper.rs
src/model/: conversation.rs
src/model_components/: model_wrapper.rs  tokeniser_wrapper.rs
ui/: appwindow.slint
