[package]
name = "james_ai"
version = "0.1.0"
authors = ["JamesJoslin"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
onnxruntime = { version = "0.0.14"}
slint = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
tokenizers = "0.20.0"
ndarray-stats = "0.5.1"
futures = "0.3.30"
tokio = { version = "1.39.3", features = ["rt", "sync", "time"] }

[build-dependencies]
slint-build = "1.6"
